fixed alignment of contributors by making each div a fixed size

--- a/io.web/src/main/webapp/css/cardshifter.css
+++ b/io.web/src/main/webapp/css/cardshifter.css
@@ -134,9 +134,10 @@ blockquote {
 }
 
 div.contributor {
-  margin-bottom: 10px;
-  margin-top: 10px;
-  width: 350px;
+
+  width: 325px;
+  height: 260px;
+  /*border: solid 1px red;*/
 }
 
 /* FORMATTING FOR ARTICLES */
